--- a/src/app/pages/chat/components/chat-input/chat-input.component.scss
+++ b/src/app/pages/chat/components/chat-input/chat-input.component.scss
@@ -1,14 +1,20 @@
 @import 'ng-devui/styles-var/devui-var.scss';
 
-.input-wrapper {
+.input-fixed {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 120px;
     background-color: $devui-global-bg-normal;
     border-top: 1px solid $devui-line;
 }
+
+.placeholder {
+    width: 100%;
+    height: 110px;
+    background-color: $devui-global-bg;
+}
+
 
 .input-bar {
     // padding-top: 30px;
@@ -38,7 +44,7 @@
     width: calc(100% - 340px);
     min-height: 50px;
     height: 50px;
-    // height: 100px;
+    max-height: 200px;
     font-size: 16px;
     padding-top: 12px;
     padding-bottom: 12px;
