--- a/src/app/pages/chat/components/chat-list/chat-list.component.scss
+++ b/src/app/pages/chat/components/chat-list/chat-list.component.scss
@@ -2,13 +2,21 @@
 
 .chat-list {
     box-shadow: $devui-shadow-length-base $devui-light-shadow;
-    // border: 1px solid $devui-line;
+}
+
+.header {
+    font-size: 18px;
+    color: white;
+    border-bottom: 2px solid $devui-line;
+    box-shadow: none;
+    padding: 18px 36px;
+    background-color: $devui-feedback-overlay-bg;
 }
 
 .chat-item {
     font-size: 16px;
     border-bottom: 1px solid $devui-line;
-    padding: 10px 18px;
+    padding: 12px 18px;
 
     &.bot {
         background-color: $devui-list-item-strip-bg;
@@ -31,5 +39,10 @@
             border: 1px solid $devui-danger-line;
             border-radius: $devui-border-radius-card;
         }
+    }
+
+    .saved {
+        margin-top: 8px;
+        text-align: right;
     }
 }
