--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -3,6 +3,118 @@
 
 .chat-content {
     background-color: $devui-global-bg-normal;
-    max-width: 1200px;
+    max-width: 1260px;
     margin: 0 auto;
+}
+
+.chat-list {
+    box-shadow: $devui-shadow-length-base $devui-light-shadow;
+}
+
+.chat-header {
+    font-size: 18px;
+    color: white;
+    border-bottom: 2px solid $devui-line;
+    box-shadow: none;
+    padding: 18px 36px;
+    background-color: $devui-feedback-overlay-bg;
+    display: flex;
+    justify-content: space-between;
+
+    .title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    d-icon {
+        cursor: pointer;
+    }
+
+}
+
+
+.chat-item {
+    font-size: 16px;
+    border-bottom: 1px solid $devui-line;
+    padding: 12px 18px;
+
+    &.bot {
+        background-color: $devui-list-item-strip-bg;
+    }
+
+    &.loading {
+        padding: {
+            top: 20px;
+            bottom: 20px;
+            left: 36px;
+        }
+    }
+
+    &.error {
+        padding: 20px 36px;
+
+        div {
+            background-color: $devui-danger-bg;
+            padding: 10px;
+            border: 1px solid $devui-danger-line;
+            border-radius: $devui-border-radius-card;
+        }
+    }
+
+    .saved {
+        margin-top: 8px;
+        text-align: right;
+    }
+}
+
+.chat-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: $devui-global-bg-normal;
+    border-top: 1px solid $devui-line;
+}
+
+.footer-placeholder {
+    width: 100%;
+    height: 110px;
+    background-color: $devui-global-bg;
+}
+
+
+.footer-bar {
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 30px 0;
+    position: relative;
+
+    @media only screen and (max-width: 1200px) {
+        padding: 30px 18px;
+    }
+
+    d-button {
+        vertical-align: bottom;
+
+        &.send {
+            width: 80px;
+        }
+
+        &.separate {
+            border-left: 1px solid $devui-line;
+        }
+    }
+}
+
+.chat-textarea {
+    width: calc(100% - 140px);
+    min-height: 50px;
+    height: 50px;
+    max-height: 200px;
+    font-size: 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
