--- a/src/app/pages/setting/setting.component.scss
+++ b/src/app/pages/setting/setting.component.scss
@@ -3,21 +3,15 @@
 
 .setting-header {
     font-size: 20px;
-    padding: 10px 0;
+    padding: 18px 30px;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid $devui-line;
-    // justify-content: space-between;
+    justify-content: space-between;
+    background-color: $devui-feedback-overlay-bg;
+    color: white;
 
-    .operate {
-        padding-right: 12px;
-        font-size: 16px;
-        border-right: 1px solid $devui-line;
+    d-icon {
         cursor: pointer;
-
-        &:hover {
-            color: $devui-primary-hover;
-        }
     }
 
     .title {
@@ -33,10 +27,8 @@
 
 .setting-content {
     background-color: $devui-global-bg-normal;
-    padding: 12px 30px;
+    // padding: 12px 30px;
     box-shadow: $devui-shadow-length-base $devui-light-shadow;
-    // border: 1px solid $devui-line;
-
     max-width: 1260px;
     margin: 0 auto;
 }
@@ -48,6 +40,7 @@
 }
 
 .setting-form {
+    padding: 12px 30px;
     font-size: 16px;
 }
 
