--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -2,8 +2,9 @@
 <div class="chat-header">
   <div class="header-fixed">
     <div class="title">
-      <d-icon icon="icon-list-view" [color]="'white'" title="读取对话"
-        (click)="showList('CHAT_SESSION')" style="margin-right: 8px;"></d-icon>
+      <d-icon icon="icon-list-view" [color]="'white'" i18n-title="icon title"
+        title="读取对话" (click)="showList('CHAT_SESSION')"
+        style="margin-right: 8px;"></d-icon>
 
       <div class="title-text" #titleDiv (click)="changeTitle(titleInput,titleDiv)">
         {{chatTitle}}</div>
@@ -19,10 +20,19 @@
       <a href="https://github.com/ocherry341/custom-chatGPT" target="_blank">
         <d-icon [icon]="githubIcon" title="github"></d-icon>
       </a>
-      <d-icon icon="icon-go-module" [color]="'white'" title="切换配置"
-        (click)="showList('CHAT_OPTIONS')"></d-icon>
-      <d-icon icon="icon-setting" [color]="'white'" title="设置"
-        [routerLink]="'./setting'"></d-icon>
+      <d-icon icon="icon-go-module" [color]="'white'" i18n-title="icon title"
+        title="切换配置" (click)="showList('CHAT_OPTIONS')"></d-icon>
+      <d-icon icon="icon-setting" [color]="'white'" i18n-title="icon title"
+        title="设置" [routerLink]="'./setting'"></d-icon>
+
+      <div dDropDown [trigger]="'hover'" appendToBody>
+        <d-icon [icon]="langIcon" dDropDownToggle> <span iconSuffix
+            style="font-size: 14px;color: white;">Language</span></d-icon>
+        <ul dDropDownMenu class="devui-dropdown-menu devui-scrollbar" role="menu">
+          <li role="menuitem"><a dDropDownMenuItem href="/en-US/">English</a></li>
+          <li role="menuitem"><a dDropDownMenuItem href="/zh-CN/">中文</a></li>
+        </ul>
+      </div>
     </d-icon-group>
   </div>
 </div>
@@ -40,13 +50,13 @@
         *ngIf="msg.role==='assistant'">
         <markdown clipboard [data]="msg.content"></markdown>
         <div *ngIf="i===hoverIndex && i!==savedIndex " class="save">
-          <d-icon title="保存对话" icon="icon-save" [operable]="true"
-            (click)="saveChats(i)">
+          <d-icon i18n-title="icon title" title="保存对话" icon="icon-save"
+            [operable]="true" (click)="saveChats(i)">
           </d-icon>
         </div>
         <div *ngIf="i===savedIndex" class="save">
-          <d-icon title="已保存" icon="icon-save" [operable]="true" [color]="'#5e7ce0'"
-            (click)="saveChats(i)">
+          <d-icon i18n-title="icon title" title="已保存" icon="icon-save"
+            [operable]="true" [color]="'#5e7ce0'" (click)="saveChats(i)">
           </d-icon>
         </div>
       </div>
@@ -54,7 +64,7 @@
     <!-- Loading Block -->
     <div *ngIf="genStart" class="chat-item bot loading">
       <d-icon [icon]="'icon-loading'" [rotate]="'infinite'">
-        <span iconSuffix>加载中</span>
+        <span iconSuffix i18n="chat loading text">加载中</span>
       </d-icon>
     </div>
     <!-- Error Block -->
@@ -68,13 +78,13 @@
   <div class="chat-footer">
     <div class="footer-bar">
       <d-button class="large-btn" bsSize='lg' (btnClick)="clear()" icon="icon-delete"
-        bsStyle="primary" title="重置"></d-button>
+        bsStyle="primary" i18n-title="icon title" title="重置"></d-button>
       <textarea #textarea class="chat-textarea" name="chat" [(ngModel)]="chatInput"
         dTextarea (input)="setTextareaHeight()" (keydown)="preventEnter($event)"
         (keyup)="enter($event)" [disabled]="!haveApiKey"></textarea>
       <d-button class="large-btn main" (btnClick)="startChat()"
-        [icon]="genPendding?'icon-loading devui-icon-spin':'icon-publish'" title="发送"
-        [disabled]="!haveApiKey"></d-button>
+        [icon]="genPendding?'icon-loading devui-icon-spin':'icon-publish'"
+        i18n-title="icon title" title="发送" [disabled]="!haveApiKey"></d-button>
     </div>
   </div>
   <div #placeholder class="footer-placeholder"></div>
@@ -83,21 +93,23 @@
 
 <div class="login" *ngIf="!haveApiKey">
   <div class="input-bar">
-    <input dTextInput #keyInput placeholder="输入ApiKey" type="password">
-    <a dTooltip [content]="'获取ApiKey'" target="_blank" class="model-help"
-      href="https://platform.openai.com/account/api-keys/">
+    <input dTextInput #keyInput i18n-placeholder placeholder="输入ApiKey"
+      type="password">
+    <a dTooltip i18n-content="tooltip content" content="获取ApiKey" target="_blank"
+      class="model-help" href="https://platform.openai.com/account/api-keys/">
       <i class="icon icon-helping"></i></a>
   </div>
-  <d-button bsSize="lg" [bordered]="true"
-    (btnClick)="setApiKey(keyInput.value)">确定</d-button>
+  <d-button bsSize="lg" [bordered]="true" (btnClick)="setApiKey(keyInput.value)"
+    i18n="button text">确定</d-button>
 </div>
 
 <d-button *ngIf="genPendding" class="gen-controller" [bordered]="true" bsSize='lg'
-  icon="icon-stop" title="停止" (btnClick)="stop()">停止</d-button>
+  icon="icon-stop" i18n-title="button title" title="停止" (btnClick)="stop()"
+  i18n="button text">停止</d-button>
 
 <d-button *ngIf="!genPendding && messages.length!==0" class="gen-controller"
-  bsSize='lg' [bordered]="true" icon="icon-refresh"
-  (btnClick)="reGenerate()">重新生成</d-button>
+  bsSize='lg' [bordered]="true" icon="icon-refresh" (btnClick)="reGenerate()"
+  i18n="button text">重新生成</d-button>
 
 <ng-template #githubIcon>
   <svg t="1678599532784" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -105,5 +117,14 @@
     <path
       d="M512 12.64c-282.752 0-512 229.216-512 512 0 226.208 146.72 418.144 350.144 485.824 25.6 4.736 35.008-11.104 35.008-24.64 0-12.192-0.48-52.544-0.704-95.328-142.464 30.976-172.512-60.416-172.512-60.416-23.296-59.168-56.832-74.912-56.832-74.912-46.464-31.776 3.52-31.136 3.52-31.136 51.392 3.616 78.464 52.768 78.464 52.768 45.664 78.272 119.776 55.648 148.992 42.56 4.576-33.088 17.856-55.68 32.512-68.48-113.728-12.928-233.28-56.864-233.28-253.024 0-55.904 20-101.568 52.768-137.44-5.312-12.896-22.848-64.96 4.96-135.488 0 0 43.008-13.76 140.832 52.48a491.296 491.296 0 0 1 128.16-17.248c43.488 0.192 87.328 5.888 128.256 17.248 97.728-66.24 140.64-52.48 140.64-52.48 27.872 70.528 10.336 122.592 5.024 135.488 32.832 35.84 52.704 81.536 52.704 137.44 0 196.64-119.776 239.936-233.792 252.64 18.368 15.904 34.72 47.04 34.72 94.816 0 68.512-0.608 123.648-0.608 140.512 0 13.632 9.216 29.6 35.168 24.576C877.472 942.624 1024 750.784 1024 524.64c0-282.784-229.248-512-512-512z"
       p-id="2894" fill="#ffffff"></path>
+  </svg>
+</ng-template>
+
+<ng-template #langIcon>
+  <svg t="1678627559038" class="icon" viewBox="0 0 1024 1024" version="1.1"
+    xmlns="http://www.w3.org/2000/svg" p-id="2949" width="20" height="20">
+    <path
+      d="M512 85.333333C277.333333 85.333333 85.333333 277.333333 85.333333 512s192 426.666667 426.666667 426.666667c234.666667 0 426.666667-192 426.666667-426.666667S746.666667 85.333333 512 85.333333zM806.4 341.333333 682.666667 341.333333c-12.8-55.466667-34.133333-102.4-59.733333-153.6C699.733333 217.6 768 268.8 806.4 341.333333zM512 170.666667c34.133333 51.2 64 106.666667 81.066667 170.666667l-162.133333 0C448 281.6 477.866667 221.866667 512 170.666667zM183.466667 597.333333C174.933333 571.733333 170.666667 541.866667 170.666667 512s4.266667-59.733333 12.8-85.333333l145.066667 0c-4.266667 29.866667-4.266667 55.466667-4.266667 85.333333s4.266667 55.466667 4.266667 85.333333L183.466667 597.333333zM217.6 682.666667 341.333333 682.666667c12.8 55.466667 34.133333 102.4 59.733333 153.6C324.266667 806.4 256 755.2 217.6 682.666667zM341.333333 341.333333 217.6 341.333333c42.666667-72.533333 106.666667-123.733333 183.466667-153.6C375.466667 238.933333 354.133333 285.866667 341.333333 341.333333zM512 853.333333c-34.133333-51.2-64-106.666667-81.066667-170.666667l162.133333 0C576 742.4 546.133333 802.133333 512 853.333333zM610.133333 597.333333 413.866667 597.333333c-4.266667-29.866667-8.533333-55.466667-8.533333-85.333333s4.266667-55.466667 8.533333-85.333333l200.533333 0c4.266667 29.866667 8.533333 55.466667 8.533333 85.333333S614.4 567.466667 610.133333 597.333333zM622.933333 836.266667c25.6-46.933333 46.933333-98.133333 59.733333-153.6l123.733333 0C768 755.2 699.733333 806.4 622.933333 836.266667zM699.733333 597.333333c4.266667-29.866667 4.266667-55.466667 4.266667-85.333333s-4.266667-55.466667-4.266667-85.333333l145.066667 0c8.533333 25.6 12.8 55.466667 12.8 85.333333s-4.266667 59.733333-12.8 85.333333L699.733333 597.333333z"
+      p-id="2950" fill="#ffffff"></path>
   </svg>
 </ng-template>
